--- a/p8105_hw3_rsh2155.md
+++ b/p8105_hw3_rsh2155.md
@@ -10,31 +10,15 @@ data("instacart")
 head(instacart)
 ```
 
-    ## # A tibble: 6 x 15
-    ##   order_id product_id add_to_cart_ord~ reordered user_id eval_set order_number
-    ##      <int>      <int>            <int>     <int>   <int> <chr>           <int>
-    ## 1        1      49302                1         1  112108 train               4
-    ## 2        1      11109                2         1  112108 train               4
-    ## 3        1      10246                3         0  112108 train               4
-    ## 4        1      49683                4         0  112108 train               4
-    ## 5        1      43633                5         1  112108 train               4
-    ## 6        1      13176                6         0  112108 train               4
-    ## # ... with 8 more variables: order_dow <int>, order_hour_of_day <int>,
-    ## #   days_since_prior_order <int>, product_name <chr>, aisle_id <int>,
-    ## #   department_id <int>, aisle <chr>, department <chr>
+This data has 1384617 observations and 15 columns. The data contains
+both user/order variables and item variables. Variables relating to the
+user and order are the user ID, order ID, order day, order hour, and
+days since prior order. Item variables include product ID, reordered
+(whether or not the user had ordered this previously), product name,
+aisle, and department. There are multiple aisles contained within
+departments.
 
-This data has 1384617 observations and 15 columns. The data is organized
-where each row is an item from one order, and the data set contains info
-on the item name and department and aisle where it can be found. It also
-contains information on whether that item was reordered, and information
-on that order (order number and time of order).
-
-User/order variables – user ID, order ID, order day, order hour. Item
-variables – name, aisle, department, and some numeric codes.
-
-Aisles are contained in departments
-
-Analyze number of aisles and which has the most items ordered from
+Analyze number of aisles and which has the most items ordered from.
 
 ``` r
 instacart %>% 
@@ -61,7 +45,7 @@ There are 134 aisles, and the most ordered items are from fresh
 vegetables, fresh fruits, and packaged vegetables fruits.
 
 Plot items ordered in each aisle, but only those with greater than
-10,000 items ordered
+10,000 items ordered.
 
 ``` r
 instacart %>% 
@@ -73,12 +57,17 @@ instacart %>%
   ) %>% 
   ggplot(aes(x = aisle, y = n)) +
   geom_point() +
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
+  labs(
+    title = "Items Ordered per Aisle",
+    x = "Aisle",
+    y = "Number of Items"
+    )
 ```
 
 <img src="p8105_hw3_rsh2155_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
 
-Make a table of most popular items in three aisles:
+Make a table of the most popular items in three aisles.
 
 ``` r
 instacart %>% 
@@ -103,7 +92,8 @@ instacart %>%
 | packaged vegetables fruits | Organic Raspberries                           | 5546 |    2 |
 | packaged vegetables fruits | Organic Blueberries                           | 4966 |    3 |
 
-Mean time of day for Apples and Ice cream
+Table of mean time of day that Pink Lady Apples and Coffee Ice Cream are
+ordered.
 
 ``` r
 instacart %>% 
@@ -125,6 +115,8 @@ instacart %>%
 | Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 | 14.25000 | 11.55172 | 12.78431 | 11.93750 |
 
 ## Problem 2
+
+Import and clean accelerometer data.
 
 ``` r
 accel_df = 
@@ -150,17 +142,11 @@ accel_df =
 
 There are 6 variables in this data set, and 50400 observations. Data of
 interest includes the activity period and activity count, which are
-respectively the minute of the day the measurement was taken, and the
+respectively the minute of the day the measurement was taken and the
 amount of activity that the man did during that minute. The week and day
 of the five week sample are included, as well as what day of the week
 each measurement was taken during. This is additionally broken into
 weekday and weekend categories.
-
-\-Recode variables (factor, etc) make sure minute of the day is numeric
--Order variables reasonably
-
-might have to use factors to order day of the week properly Total
-activity variable for each day Aggregate using sum
 
 ``` r
 accel_df %>% 
@@ -209,8 +195,14 @@ accel_df %>%
 |      34 |       367824.00 |
 |      35 |       445366.00 |
 
-Single panel plot Show activity - minute on x, activity count on y
-Geom\_line maybe Color of day of week (aes mapping)
+From the above table, it appears there were two days where this man did
+not wear the accelerometer because the activity count is at the baseline
+(day 24 and day 31). It does not appear that his activity levels are
+trending over time, but there are a few days in these five weeks where
+he had quite high activity levels, greater than 600,000 per day, and
+some low days, under 100,000 per day.
+
+Create a single-panel plot showing 24 hour activity levels.
 
 ``` r
 accel_df %>%
@@ -221,6 +213,8 @@ accel_df %>%
     breaks = c(1, 360, 720, 1080, 1440),
     labels = c("12am", "6am", "12pm", "6pm", "12pm")
   ) +
+  scale_y_continuous(limit = c(0, 750)
+  ) +
   geom_smooth(se = FALSE) +
   viridis::scale_color_viridis(
     name = "Day",
@@ -229,7 +223,7 @@ accel_df %>%
     title = "Daily Activity Plot",
     x = "Time of Day",
     y = "Activity Level"
-    )
+  )
 ```
 
     ## `summarise()` regrouping output by 'day' (override with `.groups` argument)
@@ -241,10 +235,11 @@ accel_df %>%
 From the above plot, we can see that starting at around midnight every
 day, on average the individual was moving hardly at all which is to be
 expected because he is likely asleep. Some noteworthy spikes on the plot
-are on Sundays, activity was quite high between 9 am and noon, and on
-Fridays, activity was even higher between 8 pm and 10 pm. In general,
-all days have steadily increasing activity from 6 am to 10 am, at which
-point activity stabilizes before reducing around 9 pm.
+are on Sundays, where activity was quite high between 9 am and noon, and
+on Fridays, activity was high between 8 pm and 10 pm. On average, the
+lowest activity day of the week was Saturday. In general, all days have
+steadily increasing activity from 6 am to 10 am, at which point activity
+stabilizes before reducing around 9 pm.
 
 ## Problem 3
 
@@ -257,42 +252,25 @@ ny_df = ny_noaa %>%
   mutate(
     tmin = tmin / 10,
     tmax = tmax / 10)
-  
-
-ny_df %>% 
-  count(id)
 ```
-
-    ## # A tibble: 747 x 2
-    ##    id              n
-    ##    <chr>       <int>
-    ##  1 US1NYAB0001  1157
-    ##  2 US1NYAB0006   852
-    ##  3 US1NYAB0010   822
-    ##  4 US1NYAB0016   214
-    ##  5 US1NYAB0017   459
-    ##  6 US1NYAB0021   365
-    ##  7 US1NYAB0022   273
-    ##  8 US1NYAB0023   365
-    ##  9 US1NYAB0025   215
-    ## 10 US1NYAL0002   549
-    ## # ... with 737 more rows
 
 This data set contains data, for each day and New York state weather
 station, on daily precipitation, max and min temperatures, and snow
 depth. There are 2595176 observations and 7 variables. Tmin and tmax are
 the minimum and maximum daily temperatures, respectively, in degrees C.
-Id provides the weather station ID for each station. Precipitation data
+ID provides the weather station ID for each station. Precipitation data
 is given in tenths of a mm, as well as daily snowfall (mm) and snow
 depth (mm). Missing data is a major concern with this data set; many of
-the rows of data only contain data on one of the precipitation and
-temperature variables.
+the rows of data only contain information on one of the precipitation
+and temperature variables.
 
-Further data cleaning:
+Perform further data cleaning:
 
 ``` r
 ny_df = ny_df %>% 
-  separate(date, into = c("year", "month", "day"), sep = "[-]", convert = TRUE)
+  separate(date, into = c("year", "month", "day"), sep = "[-]", convert = TRUE) %>% 
+  mutate(snow = as.double(snow))
+
 
 ny_df %>% 
   count(snow) %>% 
@@ -301,7 +279,7 @@ ny_df %>%
 
     ## # A tibble: 282 x 2
     ##     snow       n
-    ##    <int>   <int>
+    ##    <dbl>   <int>
     ##  1     0 2008508
     ##  2    NA  381221
     ##  3    25   31022
@@ -317,6 +295,8 @@ ny_df %>%
 The most commonly observed amounts of snowfall are 0 and NA. 0 is quite
 likely because during the summer and warmer parts of the spring and fall
 in NY state, there will mostly be no snow.
+
+Create a two-panel plot of average max temperature for January and July.
 
 ``` r
 month_names = c(`1` = "January", `7` = "July")
@@ -336,6 +316,12 @@ ny_df %>%
     title = "January and July Temperatures",
     x = "Year",
     y = "Mean Tmax"
+  ) +
+  viridis::scale_color_viridis(
+    discrete = TRUE) +
+  scale_x_continuous(
+    breaks = c(1980, 1990, 2000, 2010),
+    labels = c("1980", "1990", "2000", "2010")
   )
 ```
 
@@ -343,11 +329,51 @@ ny_df %>%
 
 <img src="p8105_hw3_rsh2155_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
 
-Comment on global warming, are some stations always colder?
+The above plot shows the mean temperatures at each station for the
+months of January and July, from 1980 to 2010. As expected, July
+temperatures are much warmer than January temperatures for all stations
+in New York. The January temperatures seem to have warmed over time, and
+there is also greater spread of temperatures in the 2000s than in the
+1980s and 1990s. July temperatures look more stable over time. There are
+outliers on both plots, and one point in January of 1982 particularly
+stands out, as well as a point in July of 1988. Although there is
+variation between stations in each year, across years they tend to
+follow similar patterns: when one station has a warm month, most other
+stations also have a warm month.
 
-Next 2 panel plot: pair two fundamentally dif plots together
-(patchwork).
+Create two-panel plot of min vs. max temperatures and snowfall
+distributions.
 
-Tmax vs tmin (contour plot, bin plot, or hex plot)
+``` r
+tmax_tmin = ny_df %>% 
+  ggplot(aes(x = tmax, y = tmin)) +
+  geom_hex() +
+  labs(
+    title = "Max and Min Temperatures",
+    x = "Tmax",
+    y = "Tmin"
+  ) +
+  viridis::scale_color_viridis(
+    discrete = TRUE) +
+  knitr::opts_chunk$set(fig.width = 15, fig.height = 12)
 
-distr of snowfall values: boxplots, violin plots, ridge plots
+
+  
+snowfall = ny_df %>% 
+  filter(snow > 0, snow < 100) %>% 
+  mutate(year = as.factor(year)) %>% 
+  ggplot(aes(x = snow, y = year)) +
+  geom_boxplot(alpha = 0.5) +
+  labs(
+    title = "Snowfall Distribution",
+    x = "Year",
+    y = "Snowfall"
+  ) +
+  viridis::scale_color_viridis(
+    discrete = TRUE) +
+  knitr::opts_chunk$set(fig.width = 15, fig.height = 12)
+
+tmax_tmin / snowfall
+```
+
+<img src="p8105_hw3_rsh2155_files/figure-gfm/unnamed-chunk-12-1.png" width="90%" />
