--- a/p8105_hw3_rsh2155.md
+++ b/p8105_hw3_rsh2155.md
@@ -150,50 +150,24 @@ weekday and weekend categories.
 
 ``` r
 accel_df %>% 
-  group_by(day_id) %>% 
-  summarize(daily_activity = sum(activity_count)) %>% 
+  group_by(day, week) %>% 
+  summarize(daily_activity = sum(activity_count)) %>%
+  pivot_wider(
+    names_from = day,
+    values_from = daily_activity) %>% 
+  relocate(week, Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday) %>% 
   knitr::kable()
 ```
 
-    ## `summarise()` ungrouping output (override with `.groups` argument)
+    ## `summarise()` regrouping output by 'day' (override with `.groups` argument)
 
-| day\_id | daily\_activity |
-| ------: | --------------: |
-|       1 |       480542.62 |
-|       2 |        78828.07 |
-|       3 |       376254.00 |
-|       4 |       631105.00 |
-|       5 |       355923.64 |
-|       6 |       307094.24 |
-|       7 |       340115.01 |
-|       8 |       568839.00 |
-|       9 |       295431.00 |
-|      10 |       607175.00 |
-|      11 |       422018.00 |
-|      12 |       474048.00 |
-|      13 |       423245.00 |
-|      14 |       440962.00 |
-|      15 |       467420.00 |
-|      16 |       685910.00 |
-|      17 |       382928.00 |
-|      18 |       467052.00 |
-|      19 |       371230.00 |
-|      20 |       381507.00 |
-|      21 |       468869.00 |
-|      22 |       154049.00 |
-|      23 |       409450.00 |
-|      24 |         1440.00 |
-|      25 |       260617.00 |
-|      26 |       340291.00 |
-|      27 |       319568.00 |
-|      28 |       434460.00 |
-|      29 |       620860.00 |
-|      30 |       389080.00 |
-|      31 |         1440.00 |
-|      32 |       138421.00 |
-|      33 |       549658.00 |
-|      34 |       367824.00 |
-|      35 |       445366.00 |
+| week | Sunday |    Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
+| ---: | -----: | --------: | -------: | --------: | -------: | -------: | -------: |
+|    1 | 631105 |  78828.07 | 307094.2 |    340115 | 355923.6 | 480542.6 |   376254 |
+|    2 | 422018 | 295431.00 | 423245.0 |    440962 | 474048.0 | 568839.0 |   607175 |
+|    3 | 467052 | 685910.00 | 381507.0 |    468869 | 371230.0 | 467420.0 |   382928 |
+|    4 | 260617 | 409450.00 | 319568.0 |    434460 | 340291.0 | 154049.0 |     1440 |
+|    5 | 138421 | 389080.00 | 367824.0 |    445366 | 549658.0 | 620860.0 |     1440 |
 
 From the above table, it appears there were two days where this man did
 not wear the accelerometer because the activity count is at the baseline
@@ -350,19 +324,17 @@ tmax_tmin = ny_df %>%
   geom_hex() +
   labs(
     title = "Max and Min Temperatures",
-    x = "Tmax",
-    y = "Tmin"
+    x = "Max Temperature (deg C)",
+    y = "Min Temperature (deg C)"
   ) +
   viridis::scale_color_viridis(
-    discrete = TRUE) +
-  knitr::opts_chunk$set(fig.width = 15, fig.height = 12)
+    discrete = TRUE)
 
 
-  
 snowfall = ny_df %>% 
   filter(snow > 0, snow < 100) %>% 
-  mutate(year = as.factor(year)) %>% 
-  ggplot(aes(x = snow, y = year)) +
+  mutate(year = factor(year)) %>% 
+  ggplot(aes(x = year, y = snow)) +
   geom_boxplot(alpha = 0.5) +
   labs(
     title = "Snowfall Distribution",
@@ -371,7 +343,7 @@ snowfall = ny_df %>%
   ) +
   viridis::scale_color_viridis(
     discrete = TRUE) +
-  knitr::opts_chunk$set(fig.width = 15, fig.height = 12)
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 
 tmax_tmin / snowfall
 ```
