--- a/p8105_hw3_rsh2155.md
+++ b/p8105_hw3_rsh2155.md
@@ -1,7 +1,7 @@
 P8105 Homework 3
 ================
 Rachel Heise
-10/4/2020
+10/9/2020
 
 ## Problem 1
 
@@ -104,10 +104,8 @@ instacart %>%
     names_from = order_dow,
     values_from = mean_hour
   ) %>% 
-    knitr::kable()
+  knitr::kable()
 ```
-
-    ## `summarise()` regrouping output by 'product_name' (override with `.groups` argument)
 
 | product\_name    |        0 |        1 |        2 |        3 |        4 |        5 |        6 |
 | :--------------- | -------: | -------: | -------: | -------: | -------: | -------: | -------: |
@@ -132,14 +130,6 @@ accel_df =
   mutate(weekday_weekend = recode(day, "Monday" = "weekday", "Tuesday" = "weekday", "Wednesday" = "weekday", "Thursday" = "weekday", "Friday" = "weekday", "Saturday" = "weekend", "Sunday" = "weekend"))
 ```
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   .default = col_double(),
-    ##   day = col_character()
-    ## )
-
-    ## See spec(...) for full column specifications.
-
 There are 6 variables in this data set, and 50400 observations. Data of
 interest includes the activity period and activity count, which are
 respectively the minute of the day the measurement was taken and the
@@ -159,8 +149,6 @@ accel_df %>%
   knitr::kable()
 ```
 
-    ## `summarise()` regrouping output by 'day' (override with `.groups` argument)
-
 | week | Sunday |    Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
 | ---: | -----: | --------: | -------: | --------: | -------: | -------: | -------: |
 |    1 | 631105 |  78828.07 | 307094.2 |    340115 | 355923.6 | 480542.6 |   376254 |
@@ -173,8 +161,8 @@ From the above table, it appears there were two days where this man did
 not wear the accelerometer because the activity count is at the baseline
 (day 24 and day 31). It does not appear that his activity levels are
 trending over time, but there are a few days in these five weeks where
-he had quite high activity levels, greater than 600,000 per day, and
-some low days, under 100,000 per day.
+he had quite high activity levels, greater than 600,000 per day, and a
+low day, under 100,000 per day.
 
 Create a single-panel plot showing 24 hour activity levels.
 
@@ -211,9 +199,10 @@ day, on average the individual was moving hardly at all which is to be
 expected because he is likely asleep. Some noteworthy spikes on the plot
 are on Sundays, where activity was quite high between 9 am and noon, and
 on Fridays, activity was high between 8 pm and 10 pm. On average, the
-lowest activity day of the week was Saturday. In general, all days have
-steadily increasing activity from 6 am to 10 am, at which point activity
-stabilizes before reducing around 9 pm.
+lowest activity day of the week was Saturday; however, we saw above that
+there were two Saturdays he did not wear the accelerometer. In general,
+all days have steadily increasing activity from 6 am to 10 am, at which
+point activity stabilizes before reducing around 9 pm.
 
 ## Problem 3
 
@@ -243,8 +232,9 @@ Perform further data cleaning:
 ``` r
 ny_df = ny_df %>% 
   separate(date, into = c("year", "month", "day"), sep = "[-]", convert = TRUE) %>% 
-  mutate(snow = as.double(snow))
-
+  mutate(snow = as.double(snow),
+         prcp = as.numeric(tmin)) %>% 
+  mutate(prcp = prcp / 10)
 
 ny_df %>% 
   count(snow) %>% 
@@ -289,7 +279,7 @@ ny_df %>%
   labs(
     title = "January and July Temperatures",
     x = "Year",
-    y = "Mean Tmax"
+    y = "Mean Temperature Max (deg C)"
   ) +
   viridis::scale_color_viridis(
     discrete = TRUE) +
@@ -298,8 +288,6 @@ ny_df %>%
     labels = c("1980", "1990", "2000", "2010")
   )
 ```
-
-    ## `summarise()` regrouping output by 'id', 'month' (override with `.groups` argument)
 
 <img src="p8105_hw3_rsh2155_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
 
